@@ -8,6 +8,8 @@
    dies (CASSANDRA-3216)
  * Remove dynamic_snitch boolean from example configuration (defaulting to 
    true) and set default badness threshold to 0.1 (CASSANDRA-3229)
+ * Base choice of random or "balanced" token on bootstrap on whether
+   schema definitions were found (CASSANDRA-3219)
 
 
 1.0.0-beta1
